# slop

./: .gitignore  EXPERIMENTS.md  README.md  package-lock.json  package.json  pyproject.toml
apps/latent-explorer/: .gitignore  index.html  package-lock.json  package.json  wrangler.toml
apps/latent-explorer/migrations/: 0001_latent_labels.sql
apps/latent-explorer/src/: main.jsx  parquetWorker.js  styles.css
configs/: phase2_dolci_reference_subset_seed_map.json  phase2_propensity_smoke.yaml
configs/stage1/: corpus_samples.yaml  model_job_efficiency.yaml  phase1_census.yaml  tier1_matchers.yaml
docs/experiments/: census.md  coordination_log.md  corpora.md  dataset_schema_notes.md  dolma3.md  manual_feature_regex_audit_2026-06-17.md  matchers.md  pangram_detector_deepdream_plan.md  pangram_llama_sae_plan.md  pangram_llama_sae_smoke_results.md  pangram_sae_ai_capstone_boundary_token_loci.md  pangram_sae_ai_capstone_boundary_token_loci_max640.md  pangram_sae_ai_capstone_sibling_token_loci.md  pangram_sae_ai_expressive_misc_token_loci.md  pangram_sae_ai_gpt_recommendation_review_token_loci.md  pangram_sae_ai_model_story_to_boundary_token_loci.md  pangram_sae_ai_model_story_to_unknown_token_loci.md  pangram_sae_ai_model_story_token_loci.md  pangram_sae_ai_narrative_scene_token_loci.md  pangram_sae_ai_practical_craft_seo_token_loci.md  pangram_sae_ai_qwen_polished_factual_token_loci.md  pangram_sae_ai_short_advice_token_loci.md  pangram_sae_ai_verse_rhyme_token_loci.md  pangram_sae_boundary_alt_upstream_token_loci.md  pangram_sae_boundary_terminal_dual_upstream_token_loci.md  pangram_sae_circuit_candidate_registry.md  pangram_sae_circuit_discovery_plan.md  pangram_sae_circuit_seed_report.md  pangram_sae_circuit_target_ai_advice_scaffold.md  pangram_sae_circuit_target_ai_capstone_boundary_L19_2943_to_L24_2919.md  pangram_sae_circuit_target_ai_capstone_sibling_L19_2943_to_L24_1076.md  pangram_sae_circuit_target_ai_discourse_marker_L16_3450_to_L19_3450.md  pangram_sae_circuit_target_ai_discourse_marker_L19_3450_to_L20_1780.md  pangram_sae_circuit_target_ai_discourse_marker_L19_3450_to_L24_3469.md  pangram_sae_circuit_target_ai_discourse_marker_L20_1780_to_L24_3469.md  pangram_sae_circuit_target_ai_expressive_misc_L19_2238_to_L24_605.md  pangram_sae_circuit_target_ai_gpt_recommendation_review_L19_991_to_L24_3466.md  pangram_sae_circuit_target_ai_modal_function.md  pangram_sae_circuit_target_ai_modal_function_L19_262_to_L24_1664.md  pangram_sae_circuit_target_ai_model_story_L19_3600_to_L24_4083.md  (+445 more)
scripts/: ablate_pangram_layer_sae_latents.py  ablate_pangram_sae_latents.py  analyze_pangram_sae_lexical_contexts.py  benchmark_sglang_generation.py  benchmark_vllm_generation.py  build_pangram_sae_counterfactual_targets.py  build_pangram_sae_long_stress_targets.py  build_pangram_sae_minimal_pair_targets.py  build_pangram_sae_negation_density_sweep.py  build_pangram_sae_prefix_targets.py  build_pangram_sae_score_control_panel.py  discover_pangram_sae_circuit_seeds.py  discover_pangram_sae_direct_edges.py  drive_neuralwatt_no_robots.py  export_latent_explorer_browser_data.py  export_latent_explorer_documents.py  export_latent_explorer_traces.py  export_pangram_sae_circuit_targets.py  export_pangram_sae_peak_windows.py  export_prompt_clustered_sparse_topk.py  export_sparse_sae_topk.py  extend_pangram_activation_cache.py  inspect_pangram_sae_token_loci.py  measure_pangram_sae_chain_intervention.py  measure_pangram_sae_score_ablation.py  phase2_cuda_env.sh  phase3_full_sglang_supervisor.sh  phase3_refresh_completion_audit.sh  phase4_tier3_exact_512_resume.sh  rerank_latent_explorer_by_causal_ablation.py  rerank_latent_explorer_by_linearized_causal.py  run_pangram_sae_intervention_panel.py  run_pangram_sae_score_ablation_panel.py  select_pangram_sae_circuit_controls.py  select_pangram_sae_lexical_chains.py  select_pangram_sae_pattern_targets.py  summarize_pangram_sae_latent_peak_tokens.py
src/slop_sftdiv/: __init__.py  generation_text.py  minhash.py  propensity.py  wandb_utils.py
src/slop_sftdiv/cli/: analyze_pairs.py  analyze_phase1_pybiber.py  analyze_phase2_compounding.py  analyze_phase3_free_run_effects.py  analyze_phase3_teacher_forced_effects.py  annotate_phase2_prompts.py  apply_phase4_label_adjudication.py  assemble_amplification_spectrum.py  assemble_olmo_stretch_comparison.py  assemble_phase1.py  assemble_phase2_generation_grid.py  assemble_phase2_grid.py  assemble_weighted_pretrain_baseline.py  audit_no_think_generations.py  audit_paper_abstract_conclusion.py  audit_paper_citations.py  audit_paper_claim_evidence.py  audit_paper_claim_language.py  audit_paper_figures.py  census.py  (+69 more)
tests/: test_analyze_pairs.py  test_analyze_phase1_pybiber.py  test_analyze_phase2_compounding.py  test_analyze_phase3_free_run_effects.py  test_analyze_phase3_teacher_forced_effects.py  test_annotate_phase2_prompts.py  test_apply_phase4_label_adjudication.py  test_assemble_amplification_spectrum.py  test_assemble_olmo_stretch_comparison.py  test_assemble_phase1.py  test_assemble_phase2_generation_grid.py  test_assemble_phase2_grid.py  test_assemble_weighted_pretrain_baseline.py  test_audit_no_think_generations.py  test_audit_paper_abstract_conclusion.py  test_audit_paper_citations.py  test_audit_paper_claim_evidence.py  test_audit_paper_claim_language.py  test_audit_paper_figures.py  test_audit_paper_limitations.py  test_audit_paper_manuscript_structure.py  test_audit_paper_numeric_claims.py  test_audit_paper_release_inventory.py  test_audit_paper_reproducibility_manifest.py  test_audit_paper_review_hygiene.py  test_audit_paper_source_provenance.py  test_audit_paper_submission_exit.py  test_audit_paper_table_typography.py  test_audit_paper_tables.py  test_audit_paper_terminology.py  test_audit_phase3_completion.py  test_audit_phase4_human_package.py  test_audit_sglang_generation_cache.py  test_benchmark_opportunity_extraction.py  test_benchmark_sglang_generation.py  test_benchmark_vllm_generation.py  test_biber_lite.py  test_build_style_signature.py  test_census_smoke.py  test_check_paper_package.py  (+56 more)
(+13 files in other folders)
