[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slop-sftdiv"
version = "0.1.0"
description = "SFT divergence experiment harness for slop feature census and propensity measurements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "numpy>=1.24",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "wandb>=0.17",
]

[project.optional-dependencies]
models = [
    "accelerate>=0.31",
    "torch>=2.3",
    "transformers>=4.43",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
slop-census = "slop_sftdiv.cli.census:main"
slop-analyze-pairs = "slop_sftdiv.cli.analyze_pairs:main"
slop-sample-hits = "slop_sftdiv.cli.sample_hits:main"
slop-label-hits = "slop_sftdiv.cli.label_hits:main"
slop-score-labels = "slop_sftdiv.cli.score_labels:main"
slop-manifest-artifacts = "slop_sftdiv.cli.manifest_artifacts:main"
slop-sample-corpus = "slop_sftdiv.cli.sample_corpus:main"
slop-probe-hf-sources = "slop_sftdiv.cli.probe_hf_sources:main"
slop-assemble-phase1 = "slop_sftdiv.cli.assemble_phase1:main"
slop-assemble-phase2-grid = "slop_sftdiv.cli.assemble_phase2_grid:main"
slop-assemble-phase2-generation-grid = "slop_sftdiv.cli.assemble_phase2_generation_grid:main"
slop-plan-phase2-generation = "slop_sftdiv.cli.plan_phase2_generation:main"
slop-plan-phase2-propensity = "slop_sftdiv.cli.plan_phase2_propensity:main"
slop-launch-phase2-generation-shard = "slop_sftdiv.cli.launch_phase2_generation_shard:main"
slop-phase2-generation-status = "slop_sftdiv.cli.phase2_generation_status:main"
slop-run-phase2-post-shard-analysis = "slop_sftdiv.cli.run_phase2_post_shard_analysis:main"
slop-assemble-amplification-spectrum = "slop_sftdiv.cli.assemble_amplification_spectrum:main"
slop-classify-amplification-spectrum = "slop_sftdiv.cli.classify_amplification_spectrum:main"
slop-compare-phase3-ladders = "slop_sftdiv.cli.compare_phase3_ladders:main"
slop-analyze-phase3-free-run-effects = "slop_sftdiv.cli.analyze_phase3_free_run_effects:main"
slop-analyze-phase2-compounding = "slop_sftdiv.cli.analyze_phase2_compounding:main"
slop-compare-phase2-biber = "slop_sftdiv.cli.compare_phase2_biber:main"
slop-build-style-signature = "slop_sftdiv.cli.build_style_signature:main"
slop-teacher-forced-propensity = "slop_sftdiv.cli.teacher_forced_propensity:main"
slop-free-running-emission = "slop_sftdiv.cli.free_running_emission:main"
slop-prepare-phase2-prompts = "slop_sftdiv.cli.prepare_phase2_prompts:main"
slop-annotate-phase2-prompts = "slop_sftdiv.cli.annotate_phase2_prompts:main"
slop-summarize-propensity-subsets = "slop_sftdiv.cli.summarize_propensity_subsets:main"
slop-measure-phase2-denominators = "slop_sftdiv.cli.measure_phase2_denominators:main"
slop-benchmark-propensity-scorer = "slop_sftdiv.cli.benchmark_propensity_scorer:main"
slop-benchmark-opportunity-extraction = "slop_sftdiv.cli.benchmark_opportunity_extraction:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "ty>=0.0.49",
]
